[package]
name = "bouncer"
description = "Grant your users access to restricted channels by interviewing them."
version = "0.0.0"
publish = false
rust-version = "1.76.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
clap = { version = "4.5.3", features = ["env", "derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
figment = { version = "0.10.15", features = ["env", "yaml"] }
serde = { version = "1.0.197", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
