[package]
name = "bouncer"
description = "Grant your users access to restricted channels by interviewing them."
version = "0.0.0"
publish = false
rust-version = "1.76.0"
edition = "2021"

[profile.release]
lto = "thin"

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["env", "derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
figment = { version = "0.10.15", features = ["env", "yaml"] }
serde = { version = "1.0.197", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
sqlx = { version = "0.7.4", features = ["chrono", "runtime-tokio", "sqlite"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
